exports[`parsers - renderware parses file with wrong RwClump size 1`] = `
Array [
  Object {
    "_unknown": 0,
    "children": Array [
      Object {
        "_unknown": 0,
        "data": Object {
          "count": 1,
        },
        "type": "RwData",
        "version": 772,
      },
      Object {
        "_unknown": 0,
        "children": Array [
          Object {
            "_unknown": 0,
            "data": Object {
              "frames": Array [
                Object {
                  "_unknown": 131075,
                  "offset": Array [
                    0,
                    0,
                    0,
                  ],
                  "parentFrame": -1,
                  "transform": Array [
                    1,
                    0,
                    0,
                    0,
                    1,
                    0,
                    0,
                    0,
                    1,
                  ],
                },
                Object {
                  "_unknown": 0,
                  "offset": Array [
                    0,
                    0,
                    0,
                  ],
                  "parentFrame": 0,
                  "transform": Array [
                    1,
                    0,
                    0,
                    0,
                    1,
                    0,
                    0,
                    0,
                    1,
                  ],
                },
              ],
            },
            "type": "RwData",
            "version": 772,
          },
          Object {
            "_unknown": 0,
            "children": Array [
              Object {
                "_unknown": 0,
                "data": Object {
                  "_unknownData": Object {
                    "data": Array [
                      255,
                      255,
                      255,
                      255,
                      0,
                      0,
                      0,
                      0,
                    ],
                    "type": "Buffer",
                  },
                },
                "type": "RwAnimPlugin",
                "version": 772,
              },
            ],
            "type": "RwExtension",
            "version": 772,
          },
          Object {
            "_unknown": 0,
            "children": Array [
              Object {
                "_unknown": 0,
                "data": Object {
                  "_unknownData": Object {
                    "data": Array [
                      0,
                      0,
                      0,
                      0,
                      1,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      1,
                      0,
                      0,
                      0,
                      1,
                      0,
                      0,
                      0,
                      8,
                      0,
                      0,
                      0,
                      100,
                      101,
                      102,
                      97,
                      117,
                      108,
                      116,
                      0,
                      1,
                      0,
                      0,
                      0,
                      2,
                      0,
                      0,
                      0,
                      1,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      194,
                      245,
                      171,
                      49,
                      128,
                      149,
                      4,
                      176,
                      0,
                      0,
                      0,
                      0,
                      194,
                      245,
                      171,
                      49,
                      128,
                      149,
                      4,
                      176,
                      0,
                      0,
                      0,
                      0,
                      1,
                      0,
                      0,
                      0,
                      171,
                      170,
                      154,
                      64,
                      8,
                      0,
                      0,
                      0,
                      100,
                      101,
                      102,
                      97,
                      117,
                      108,
                      116,
                      0,
                      2,
                      0,
                      0,
                      0,
                      2,
                      0,
                      0,
                      0,
                      1,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      128,
                      63,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      128,
                      63,
                      0,
                      0,
                      0,
                      0,
                      1,
                      0,
                      0,
                      0,
                      171,
                      170,
                      154,
                      64,
                    ],
                    "type": "Buffer",
                  },
                },
                "type": "RwAnimPlugin",
                "version": 772,
              },
            ],
            "type": "RwExtension",
            "version": 772,
          },
        ],
        "type": "RwFrameList",
        "version": 772,
      },
      Object {
        "_unknown": 0,
        "children": Array [
          Object {
            "_unknown": 0,
            "data": Object {
              "geometryCount": 1,
            },
            "type": "RwData",
            "version": 772,
          },
          Object {
            "_unknown": 0,
            "children": Array [
              Object {
                "_unknown": 0,
                "data": Object {
                  "boundingSphere": Object {
                    "position": Array [
                      0.0000019073486328125,
                      1.7372946739196777,
                      0.0000057220458984375,
                    ],
                    "radius": 55.09138870239258,
                  },
                  "extraInfo": Object {
                    "hasNormals": 1,
                    "hasPositions": 1,
                  },
                  "flags": Object {
                    "RwLight": true,
                    "RwModulateMaterialColor": false,
                    "RwNative": false,
                    "RwNativeInstance": false,
                    "RwNormals": true,
                    "RwPositions": false,
                    "RwPrelit": true,
                    "RwTextured": true,
                    "RwTextured2": false,
                    "RwTriangleStrip": true,
                  },
                  "indices": Array [
                    Array [
                      1,
                      0,
                      0,
                      2,
                    ],
                    Array [
                      3,
                      2,
                      0,
                      0,
                    ],
                    Array [
                      5,
                      4,
                      0,
                      6,
                    ],
                    Array [
                      7,
                      6,
                      0,
                      4,
                    ],
                    Array [
                      9,
                      8,
                      0,
                      10,
                    ],
                    Array [
                      11,
                      10,
                      0,
                      8,
                    ],
                    Array [
                      13,
                      12,
                      0,
                      14,
                    ],
                    Array [
                      15,
                      14,
                      0,
                      12,
                    ],
                    Array [
                      17,
                      16,
                      0,
                      18,
                    ],
                    Array [
                      19,
                      18,
                      0,
                      16,
                    ],
                    Array [
                      21,
                      20,
                      0,
                      22,
                    ],
                    Array [
                      23,
                      22,
                      0,
                      20,
                    ],
                  ],
                  "lighting": Object {
                    "ambient": 1,
                    "diffuse": 1,
                    "specular": 1,
                  },
                  "morphTargetCount": 1,
                  "normals": Array [
                    Array [
                      1,
                      0,
                      0,
                    ],
                    Array [
                      1,
                      0,
                      0,
                    ],
                    Array [
                      1,
                      0,
                      0,
                    ],
                    Array [
                      1,
                      0,
                      0,
                    ],
                    Array [
                      0.49999988079071045,
                      1.195037953038991e-7,
                      -0.866025447845459,
                    ],
                    Array [
                      0.49999985098838806,
                      1.0116880844179832e-7,
                      -0.8660255074501038,
                    ],
                    Array [
                      0.49999988079071045,
                      1.195037953038991e-7,
                      -0.866025447845459,
                    ],
                    Array [
                      0.49999991059303284,
                      1.378387963768546e-7,
                      -0.866025447845459,
                    ],
                    Array [
                      -0.5000002384185791,
                      1.9021091191007145e-7,
                      -0.8660252690315247,
                    ],
                    Array [
                      -0.5000002980232239,
                      1.7187589662626124e-7,
                      -0.8660252094268799,
                    ],
                    Array [
                      -0.5000002384185791,
                      1.9021091191007145e-7,
                      -0.8660252690315247,
                    ],
                    Array [
                      -0.5000001788139343,
                      2.0854592719388165e-7,
                      -0.8660252690315247,
                    ],
                    Array [
                      -1,
                      -2.649207350886862e-13,
                      6.798654794692993e-7,
                    ],
                    Array [
                      -1,
                      -2.586880362698274e-13,
                      6.798654794692993e-7,
                    ],
                    Array [
                      -1,
                      -2.649207350886862e-13,
                      6.798654794692993e-7,
                    ],
                    Array [
                      -1,
                      -2.7115340680249067e-13,
                      6.798655363127182e-7,
                    ],
                    Array [
                      -0.49999940395355225,
                      -1.4503189049719367e-7,
                      0.8660257458686829,
                    ],
                    Array [
                      -0.4999992847442627,
                      -2.085462398326854e-7,
                      0.8660258054733276,
                    ],
                    Array [
                      -0.49999940395355225,
                      -1.4503189049719367e-7,
                      0.8660257458686829,
                    ],
                    Array [
                      -0.4999995529651642,
                      -8.151754826712931e-8,
                      0.8660256862640381,
                    ],
                    Array [
                      0.5000004768371582,
                      -1.6468314356643532e-7,
                      0.8660251498222351,
                    ],
                    Array [
                      0.5000005960464478,
                      -2.2819742184765346e-7,
                      0.8660250902175903,
                    ],
                    Array [
                      0.5000004768371582,
                      -1.6468314356643532e-7,
                      0.8660251498222351,
                    ],
                    Array [
                      0.5000003576278687,
                      -1.0116886528521718e-7,
                      0.8660252094268799,
                    ],
                  ],
                  "textureCoords": Array [
                    Array [
                      1.123389720916748,
                      1,
                    ],
                    Array [
                      1.3717751502990723,
                      1,
                    ],
                    Array [
                      1.3717751502990723,
                      0,
                    ],
                    Array [
                      1.123389720916748,
                      0,
                    ],
                    Array [
                      1.1759848594665527,
                      1,
                    ],
                    Array [
                      1.424370288848877,
                      1,
                    ],
                    Array [
                      1.424370288848877,
                      0,
                    ],
                    Array [
                      1.1759848594665527,
                      0,
                    ],
                    Array [
                      0.9211003184318542,
                      1,
                    ],
                    Array [
                      1.1694858074188232,
                      1,
                    ],
                    Array [
                      1.1694858074188232,
                      0,
                    ],
                    Array [
                      0.9211003184318542,
                      0,
                    ],
                    Array [
                      1.293312668800354,
                      1,
                    ],
                    Array [
                      1.5416982173919678,
                      1,
                    ],
                    Array [
                      1.5416982173919678,
                      0,
                    ],
                    Array [
                      1.293312668800354,
                      0,
                    ],
                    Array [
                      1.297358512878418,
                      1,
                    ],
                    Array [
                      1.5457439422607422,
                      1,
                    ],
                    Array [
                      1.5457439422607422,
                      0,
                    ],
                    Array [
                      1.297358512878418,
                      0,
                    ],
                    Array [
                      1.5441514253616333,
                      1,
                    ],
                    Array [
                      1.792536973953247,
                      1,
                    ],
                    Array [
                      1.792536973953247,
                      0,
                    ],
                    Array [
                      1.5441514253616333,
                      0,
                    ],
                  ],
                  "triangleCount": 12,
                  "vertexColors": Array [
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                  ],
                  "vertexCount": 24,
                  "vertices": Array [
                    Array [
                      -53.299354553222656,
                      -10.746034622192383,
                      5.12881326675415,
                    ],
                    Array [
                      -53.299354553222656,
                      -10.7460355758667,
                      -5.644225597381592,
                    ],
                    Array [
                      -53.299354553222656,
                      14.220623970031738,
                      -5.64422607421875,
                    ],
                    Array [
                      -53.299354553222656,
                      14.220623970031738,
                      5.128812313079834,
                    ],
                    Array [
                      -22.20798683166504,
                      -10.746042251586914,
                      48.72299575805664,
                    ],
                    Array [
                      -31.537715911865234,
                      -10.746044158935547,
                      43.33647537231445,
                    ],
                    Array [
                      -31.5377197265625,
                      14.22061538696289,
                      43.33647918701172,
                    ],
                    Array [
                      -22.207992553710938,
                      14.220616340637207,
                      48.72299575805664,
                    ],
                    Array [
                      31.091373443603516,
                      -10.746041297912598,
                      43.59416580200195,
                    ],
                    Array [
                      21.761648178100586,
                      -10.746045112609863,
                      48.980690002441406,
                    ],
                    Array [
                      21.761642456054688,
                      14.22061538696289,
                      48.98069763183594,
                    ],
                    Array [
                      31.09136962890625,
                      14.220617294311523,
                      43.59417724609375,
                    ],
                    Array [
                      53.29935073852539,
                      -10.74603271484375,
                      -5.1288371086120605,
                    ],
                    Array [
                      53.29935836791992,
                      -10.746037483215332,
                      5.644201755523682,
                    ],
                    Array [
                      53.29935836791992,
                      14.220622062683105,
                      5.6442108154296875,
                    ],
                    Array [
                      53.29935073852539,
                      14.220625877380371,
                      -5.128827095031738,
                    ],
                    Array [
                      22.207965850830078,
                      -10.746025085449219,
                      -48.72300720214844,
                    ],
                    Array [
                      31.537696838378906,
                      -10.746028900146484,
                      -43.33649444580078,
                    ],
                    Array [
                      31.537700653076172,
                      14.22063159942627,
                      -43.33648681640625,
                    ],
                    Array [
                      22.207969665527344,
                      14.220634460449219,
                      -48.72300338745117,
                    ],
                    Array [
                      -31.091388702392578,
                      -10.746026039123535,
                      -43.59415817260742,
                    ],
                    Array [
                      -21.76166534423828,
                      -10.746027946472168,
                      -48.98068618774414,
                    ],
                    Array [
                      -21.761661529541016,
                      14.220632553100586,
                      -48.980682373046875,
                    ],
                    Array [
                      -31.091384887695312,
                      14.220633506774902,
                      -43.59415817260742,
                    ],
                  ],
                },
                "type": "RwData",
                "version": 772,
              },
              Object {
                "_unknown": 0,
                "children": Array [
                  Object {
                    "_unknown": 0,
                    "data": Object {
                      "_unknown": Array [
                        -1,
                      ],
                      "count": 1,
                    },
                    "type": "RwData",
                    "version": 772,
                  },
                  Object {
                    "_unknown": 0,
                    "children": Array [
                      Object {
                        "_unknown": 0,
                        "data": Object {
                          "_unknown1": 0,
                          "_unknown2": 1,
                          "color": "ffffffff",
                          "lighting": Object {
                            "ambient": 1,
                            "diffuse": 1,
                            "specular": 0.05000000074505806,
                          },
                          "textureCount": 1,
                        },
                        "type": "RwData",
                        "version": 772,
                      },
                      Object {
                        "_unknown": 0,
                        "children": Array [
                          Object {
                            "_unknown": 0,
                            "data": Object {
                              "_padding": 0,
                              "addrModeU": "RwWrap",
                              "addrModeV": "RwDefault",
                              "filterMode": "RwLinearMipLinear",
                            },
                            "type": "RwData",
                            "version": 772,
                          },
                          Object {
                            "_unknown": 0,
                            "data": "ibd00th",
                            "type": "RwString",
                            "version": 772,
                          },
                          Object {
                            "_unknown": 0,
                            "data": "",
                            "type": "RwString",
                            "version": 772,
                          },
                          Object {
                            "_unknown": 0,
                            "children": Array [],
                            "type": "RwExtension",
                            "version": 772,
                          },
                        ],
                        "type": "RwTexture",
                        "version": 772,
                      },
                      Object {
                        "_unknown": 0,
                        "children": Array [],
                        "type": "RwExtension",
                        "version": 772,
                      },
                    ],
                    "type": "RwMaterial",
                    "version": 772,
                  },
                ],
                "type": "RwMaterialList",
                "version": 772,
              },
              Object {
                "_unknown": 0,
                "children": Array [
                  Object {
                    "_unknown": 0,
                    "data": Object {
                      "faceCount": 34,
                      "faceType": "RwTriangleStrip",
                      "splitCount": 1,
                      "splits": Array [
                        Object {
                          "count": 34,
                          "indices": Array [
                            7,
                            4,
                            6,
                            5,
                            5,
                            11,
                            11,
                            8,
                            10,
                            9,
                            9,
                            1,
                            1,
                            2,
                            0,
                            3,
                            3,
                            15,
                            15,
                            12,
                            14,
                            13,
                            13,
                            19,
                            19,
                            16,
                            18,
                            17,
                            17,
                            23,
                            23,
                            20,
                            22,
                            21,
                          ],
                          "materialIndex": 0,
                        },
                      ],
                    },
                    "type": "RwMaterialSplit",
                    "version": 772,
                  },
                  Object {
                    "_unknown": 0,
                    "data": Object {
                      "_unknownData": Object {
                        "data": Array [
                          0,
                          0,
                          0,
                          0,
                        ],
                        "type": "Buffer",
                      },
                    },
                    "type": "RwMorphPlugin",
                    "version": 772,
                  },
                ],
                "type": "RwExtension",
                "version": 772,
              },
            ],
            "type": "RwGeometry",
            "version": 772,
          },
        ],
        "type": "RwGeometryList",
        "version": 772,
      },
      Object {
        "_unknown": 0,
        "children": Array [
          Object {
            "_unknown": 0,
            "data": Object {
              "_unknown1": 5,
              "_unknown2": 0,
              "frameIndex": 1,
              "geometryIndex": 0,
            },
            "type": "RwData",
            "version": 772,
          },
          Object {
            "_unknown": 0,
            "children": Array [],
            "type": "RwExtension",
            "version": 772,
          },
        ],
        "type": "RwAtomic",
        "version": 772,
      },
      Object {
        "_unknown": 0,
        "children": Array [
          Object {
            "_unknown": 0,
            "data": Object {
              "_unknownData": Object {
                "data": Array [
                  1,
                  0,
                  0,
                  0,
                ],
                "type": "Buffer",
              },
            },
            "type": "RwAnimPlugin",
            "version": 772,
          },
        ],
        "type": "RwExtension",
        "version": 772,
      },
    ],
    "type": "RwClump",
    "version": 772,
  },
]
`;

exports[`parsers - renderware parses smallest known files 1`] = `
Array [
  Object {
    "_unknown": 0,
    "children": Array [
      Object {
        "_unknown": 0,
        "data": Object {
          "count": 0,
        },
        "type": "RwData",
        "version": 772,
      },
      Object {
        "_unknown": 0,
        "children": Array [
          Object {
            "_unknown": 0,
            "data": Object {
              "frames": Array [
                Object {
                  "_unknown": 0,
                  "offset": Array [
                    0,
                    0,
                    0,
                  ],
                  "parentFrame": -1,
                  "transform": Array [
                    1,
                    0,
                    0,
                    0,
                    1,
                    0,
                    0,
                    0,
                    1,
                  ],
                },
              ],
            },
            "type": "RwData",
            "version": 772,
          },
          Object {
            "_unknown": 0,
            "children": Array [],
            "type": "RwExtension",
            "version": 772,
          },
        ],
        "type": "RwFrameList",
        "version": 772,
      },
      Object {
        "_unknown": 0,
        "children": Array [
          Object {
            "_unknown": 0,
            "data": Object {
              "geometryCount": 0,
            },
            "type": "RwData",
            "version": 772,
          },
        ],
        "type": "RwGeometryList",
        "version": 772,
      },
      Object {
        "_unknown": 0,
        "children": Array [],
        "type": "RwExtension",
        "version": 772,
      },
    ],
    "type": "RwClump",
    "version": 772,
  },
]
`;

exports[`parsers - renderware parses smallest known files 2`] = `
Array [
  Object {
    "_unknown": 0,
    "children": Array [
      Object {
        "_unknown": 0,
        "data": Object {
          "count": 1,
        },
        "type": "RwData",
        "version": 769,
      },
      Object {
        "_unknown": 0,
        "children": Array [
          Object {
            "_unknown": 0,
            "data": Object {
              "frames": Array [
                Object {
                  "_unknown": 0,
                  "offset": Array [
                    -15.57772445678711,
                    -25.703754425048828,
                    -353.53607177734375,
                  ],
                  "parentFrame": -1,
                  "transform": Array [
                    1,
                    0,
                    0,
                    0,
                    1,
                    -1.1920928955078125e-7,
                    0,
                    1.1920928955078125e-7,
                    1,
                  ],
                },
              ],
            },
            "type": "RwData",
            "version": 769,
          },
          Object {
            "_unknown": 0,
            "children": Array [],
            "type": "RwExtension",
            "version": 769,
          },
        ],
        "type": "RwFrameList",
        "version": 769,
      },
      Object {
        "_unknown": 0,
        "children": Array [
          Object {
            "_unknown": 0,
            "data": Object {
              "_unknown1": 0,
              "frameIndex": 0,
              "geometryIndex": 5,
            },
            "type": "RwData",
            "version": 769,
          },
          Object {
            "_unknown": 0,
            "children": Array [
              Object {
                "_unknown": 0,
                "data": Object {
                  "boundingSphere": Object {
                    "position": Array [
                      0,
                      -0.00000280464018942439,
                      0.0000152587890625,
                    ],
                    "radius": 117.14694213867188,
                  },
                  "extraInfo": Object {
                    "hasNormals": 1,
                    "hasPositions": 1,
                  },
                  "flags": Object {
                    "RwLight": true,
                    "RwModulateMaterialColor": false,
                    "RwNative": false,
                    "RwNativeInstance": false,
                    "RwNormals": true,
                    "RwPositions": false,
                    "RwPrelit": true,
                    "RwTextured": true,
                    "RwTextured2": false,
                    "RwTriangleStrip": false,
                  },
                  "indices": Array [
                    Array [
                      1,
                      0,
                      0,
                      2,
                    ],
                    Array [
                      3,
                      2,
                      0,
                      0,
                    ],
                  ],
                  "lighting": Object {
                    "ambient": 1,
                    "diffuse": 1,
                    "specular": 1,
                  },
                  "morphTargetCount": 1,
                  "normals": Array [
                    Array [
                      -1.0256127502827894e-8,
                      1.3249768926471006e-7,
                      1,
                    ],
                    Array [
                      -1.0256130167363153e-8,
                      1.3249767505385535e-7,
                      1,
                    ],
                    Array [
                      -1.0256127502827894e-8,
                      1.3249768926471006e-7,
                      1,
                    ],
                    Array [
                      -1.0256124838292635e-8,
                      1.3249768926471006e-7,
                      1,
                    ],
                  ],
                  "textureCoords": Array [
                    Array [
                      0.01578843593597412,
                      0.3454105854034424,
                    ],
                    Array [
                      0.01578843593597412,
                      0.012077271938323975,
                    ],
                    Array [
                      0.9861851334571838,
                      0.012077271938323975,
                    ],
                    Array [
                      0.9861851334571838,
                      0.3454105854034424,
                    ],
                  ],
                  "triangleCount": 2,
                  "vertexColors": Array [
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                    "ffffffff",
                  ],
                  "vertexCount": 4,
                  "vertices": Array [
                    Array [
                      -31.419342041015625,
                      0.000002094379624395515,
                      -112.73059844970703,
                    ],
                    Array [
                      -116.67822265625,
                      -0.000004419617653184105,
                      9.031622886657715,
                    ],
                    Array [
                      31.419374465942383,
                      -0.00000770366023061797,
                      112.73062896728516,
                    ],
                    Array [
                      116.67822265625,
                      -0.000001189664430967241,
                      -9.031582832336426,
                    ],
                  ],
                },
                "type": "RwData",
                "version": 769,
              },
              Object {
                "_unknown": 0,
                "children": Array [
                  Object {
                    "_unknown": 0,
                    "data": Object {
                      "_unknown": Array [
                        -1,
                      ],
                      "count": 1,
                    },
                    "type": "RwData",
                    "version": 769,
                  },
                  Object {
                    "_unknown": 0,
                    "children": Array [
                      Object {
                        "_unknown": 0,
                        "data": Object {
                          "_unknown1": 0,
                          "_unknown2": 31545202,
                          "color": "ffffffff",
                          "textureCount": 1,
                        },
                        "type": "RwData",
                        "version": 769,
                      },
                      Object {
                        "_unknown": 0,
                        "children": Array [
                          Object {
                            "_unknown": 0,
                            "data": Object {
                              "_padding": 0,
                              "addrModeU": "RwWrap",
                              "addrModeV": "RwDefault",
                              "filterMode": "RwLinearMipLinear",
                            },
                            "type": "RwData",
                            "version": 769,
                          },
                          Object {
                            "_unknown": 0,
                            "data": "scl01tp",
                            "type": "RwString",
                            "version": 769,
                          },
                          Object {
                            "_unknown": 0,
                            "data": "scl01mp",
                            "type": "RwString",
                            "version": 769,
                          },
                          Object {
                            "_unknown": 0,
                            "children": Array [],
                            "type": "RwExtension",
                            "version": 769,
                          },
                        ],
                        "type": "RwTexture",
                        "version": 769,
                      },
                      Object {
                        "_unknown": 0,
                        "children": Array [],
                        "type": "RwExtension",
                        "version": 769,
                      },
                    ],
                    "type": "RwMaterial",
                    "version": 769,
                  },
                ],
                "type": "RwMaterialList",
                "version": 769,
              },
              Object {
                "_unknown": 0,
                "children": Array [
                  Object {
                    "_unknown": 0,
                    "data": Object {
                      "faceCount": 6,
                      "faceType": "RwTriangles",
                      "splitCount": 1,
                      "splits": Array [
                        Object {
                          "count": 6,
                          "indices": Array [
                            2,
                            3,
                            0,
                            0,
                            1,
                            2,
                          ],
                          "materialIndex": 0,
                        },
                      ],
                    },
                    "type": "RwMaterialSplit",
                    "version": 769,
                  },
                ],
                "type": "RwExtension",
                "version": 769,
              },
            ],
            "type": "RwGeometry",
            "version": 769,
          },
          Object {
            "_unknown": 0,
            "children": Array [],
            "type": "RwExtension",
            "version": 769,
          },
        ],
        "type": "RwAtomic",
        "version": 769,
      },
      Object {
        "_unknown": 0,
        "children": Array [],
        "type": "RwExtension",
        "version": 769,
      },
    ],
    "type": "RwClump",
    "version": 769,
  },
]
`;

exports[`parsers - renderware parses smallest known files 3`] = `
Array [
  Object {
    "_unknown": 0,
    "children": Array [
      Object {
        "_unknown": 0,
        "data": Object {
          "count": 1,
        },
        "type": "RwData",
        "version": 772,
      },
      Object {
        "_unknown": 0,
        "children": Array [
          Object {
            "_unknown": 0,
            "data": Object {
              "frames": Array [
                Object {
                  "_unknown": 131075,
                  "offset": Array [
                    0,
                    0,
                    0,
                  ],
                  "parentFrame": -1,
                  "transform": Array [
                    1,
                    0,
                    0,
                    0,
                    1,
                    0,
                    0,
                    0,
                    1,
                  ],
                },
                Object {
                  "_unknown": 0,
                  "offset": Array [
                    0,
                    0,
                    0,
                  ],
                  "parentFrame": 0,
                  "transform": Array [
                    1,
                    0,
                    0,
                    0,
                    1,
                    0,
                    0,
                    0,
                    1,
                  ],
                },
              ],
            },
            "type": "RwData",
            "version": 772,
          },
          Object {
            "_unknown": 0,
            "children": Array [
              Object {
                "_unknown": 0,
                "data": Object {
                  "_unknownData": Object {
                    "data": Array [
                      255,
                      255,
                      255,
                      255,
                      0,
                      0,
                      0,
                      0,
                    ],
                    "type": "Buffer",
                  },
                },
                "type": "RwAnimPlugin",
                "version": 772,
              },
            ],
            "type": "RwExtension",
            "version": 772,
          },
          Object {
            "_unknown": 0,
            "children": Array [
              Object {
                "_unknown": 0,
                "data": Object {
                  "_unknownData": Object {
                    "data": Array [
                      0,
                      0,
                      0,
                      0,
                      1,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      1,
                      0,
                      0,
                      0,
                      1,
                      0,
                      0,
                      0,
                      8,
                      0,
                      0,
                      0,
                      100,
                      101,
                      102,
                      97,
                      117,
                      108,
                      116,
                      0,
                      1,
                      0,
                      0,
                      0,
                      2,
                      0,
                      0,
                      0,
                      1,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      1,
                      0,
                      0,
                      0,
                      239,
                      238,
                      174,
                      63,
                      8,
                      0,
                      0,
                      0,
                      100,
                      101,
                      102,
                      97,
                      117,
                      108,
                      116,
                      0,
                      2,
                      0,
                      0,
                      0,
                      2,
                      0,
                      0,
                      0,
                      1,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      128,
                      63,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      128,
                      63,
                      0,
                      0,
                      0,
                      0,
                      1,
                      0,
                      0,
                      0,
                      239,
                      238,
                      174,
                      63,
                    ],
                    "type": "Buffer",
                  },
                },
                "type": "RwAnimPlugin",
                "version": 772,
              },
            ],
            "type": "RwExtension",
            "version": 772,
          },
        ],
        "type": "RwFrameList",
        "version": 772,
      },
      Object {
        "_unknown": 0,
        "children": Array [
          Object {
            "_unknown": 0,
            "data": Object {
              "geometryCount": 1,
            },
            "type": "RwData",
            "version": 772,
          },
          Object {
            "_unknown": 0,
            "children": Array [
              Object {
                "_unknown": 0,
                "data": Object {
                  "boundingSphere": Object {
                    "position": Array [
                      0.012202347628772259,
                      -0.02272554486989975,
                      0,
                    ],
                    "radius": 5.484569669533812e-7,
                  },
                  "extraInfo": Object {
                    "hasNormals": 1,
                    "hasPositions": 1,
                  },
                  "flags": Object {
                    "RwLight": true,
                    "RwModulateMaterialColor": false,
                    "RwNative": false,
                    "RwNativeInstance": false,
                    "RwNormals": true,
                    "RwPositions": false,
                    "RwPrelit": false,
                    "RwTextured": false,
                    "RwTextured2": false,
                    "RwTriangleStrip": false,
                  },
                  "indices": Array [
                    Array [
                      1,
                      0,
                      0,
                      2,
                    ],
                  ],
                  "lighting": Object {
                    "ambient": 1,
                    "diffuse": 1,
                    "specular": 1,
                  },
                  "morphTargetCount": 1,
                  "normals": Array [
                    Array [
                      0,
                      0,
                      1,
                    ],
                    Array [
                      0,
                      0,
                      1,
                    ],
                    Array [
                      0,
                      0,
                      1,
                    ],
                  ],
                  "triangleCount": 1,
                  "vertexCount": 3,
                  "vertices": Array [
                    Array [
                      0.012202607467770576,
                      -0.0227260272949934,
                      0,
                    ],
                    Array [
                      0.012202607467770576,
                      -0.0227250624448061,
                      0,
                    ],
                    Array [
                      0.012202087789773941,
                      -0.0227260272949934,
                      0,
                    ],
                  ],
                },
                "type": "RwData",
                "version": 772,
              },
              Object {
                "_unknown": 0,
                "children": Array [
                  Object {
                    "_unknown": 0,
                    "data": Object {
                      "_unknown": Array [
                        -1,
                      ],
                      "count": 1,
                    },
                    "type": "RwData",
                    "version": 772,
                  },
                  Object {
                    "_unknown": 0,
                    "children": Array [
                      Object {
                        "_unknown": 0,
                        "data": Object {
                          "_unknown1": 0,
                          "_unknown2": 1,
                          "color": "ffffffff",
                          "lighting": Object {
                            "ambient": 1,
                            "diffuse": 1,
                            "specular": 1,
                          },
                          "textureCount": 0,
                        },
                        "type": "RwData",
                        "version": 772,
                      },
                      Object {
                        "_unknown": 0,
                        "children": Array [],
                        "type": "RwExtension",
                        "version": 772,
                      },
                    ],
                    "type": "RwMaterial",
                    "version": 772,
                  },
                ],
                "type": "RwMaterialList",
                "version": 772,
              },
              Object {
                "_unknown": 0,
                "children": Array [
                  Object {
                    "_unknown": 0,
                    "data": Object {
                      "faceCount": 3,
                      "faceType": "RwTriangles",
                      "splitCount": 1,
                      "splits": Array [
                        Object {
                          "count": 3,
                          "indices": Array [
                            0,
                            1,
                            2,
                          ],
                          "materialIndex": 0,
                        },
                      ],
                    },
                    "type": "RwMaterialSplit",
                    "version": 772,
                  },
                  Object {
                    "_unknown": 0,
                    "data": Object {
                      "_unknownData": Object {
                        "data": Array [
                          0,
                          0,
                          0,
                          0,
                        ],
                        "type": "Buffer",
                      },
                    },
                    "type": "RwMorphPlugin",
                    "version": 772,
                  },
                ],
                "type": "RwExtension",
                "version": 772,
              },
            ],
            "type": "RwGeometry",
            "version": 772,
          },
        ],
        "type": "RwGeometryList",
        "version": 772,
      },
      Object {
        "_unknown": 0,
        "children": Array [
          Object {
            "_unknown": 0,
            "data": Object {
              "_unknown1": 5,
              "_unknown2": 0,
              "frameIndex": 1,
              "geometryIndex": 0,
            },
            "type": "RwData",
            "version": 772,
          },
          Object {
            "_unknown": 0,
            "children": Array [],
            "type": "RwExtension",
            "version": 772,
          },
        ],
        "type": "RwAtomic",
        "version": 772,
      },
      Object {
        "_unknown": 0,
        "children": Array [
          Object {
            "_unknown": 0,
            "data": Object {
              "_unknownData": Object {
                "data": Array [
                  1,
                  0,
                  0,
                  0,
                ],
                "type": "Buffer",
              },
            },
            "type": "RwAnimPlugin",
            "version": 772,
          },
        ],
        "type": "RwExtension",
        "version": 772,
      },
    ],
    "type": "RwClump",
    "version": 772,
  },
]
`;

exports[`parsers - renderware parses smallest known files 4`] = `
Array [
  Object {
    "_unknown": 0,
    "children": Array [
      Object {
        "_unknown": 0,
        "data": Object {
          "colSectorSize": 0,
          "flags": Object {
            "RpWorldSectorOverlap": true,
            "RwLight": true,
            "RwModulateMaterialColor": true,
            "RwNative": false,
            "RwNativeInstance": false,
            "RwNormals": true,
            "RwPositions": false,
            "RwPrelit": true,
            "RwTextured": true,
            "RwTextured2": false,
            "RwTriangleStrip": false,
          },
          "invWorldOrigin": Array [
            -42.29510498046875,
            -1.4610846042633057,
            -45.50502014160156,
          ],
          "lighting": Object {
            "ambient": 1,
            "diffuse": 1,
            "specular": 0,
          },
          "planeSectorCount": 0,
          "rootIsWorldSector": 1,
          "triangleCount": 2,
          "vertexCount": 4,
          "worldSectorCount": 1,
        },
        "type": "RwData",
        "version": 784,
      },
      Object {
        "_unknown": 0,
        "children": Array [
          Object {
            "_unknown": 0,
            "data": Object {
              "_unknown": Array [
                -1,
              ],
              "count": 1,
            },
            "type": "RwData",
            "version": 784,
          },
          Object {
            "_unknown": 0,
            "children": Array [
              Object {
                "_unknown": 0,
                "data": Object {
                  "_unknown1": 0,
                  "_unknown2": 17479432,
                  "_unknown3": Array [
                    1,
                    0.05000000074505806,
                    1,
                  ],
                  "color": "ffffffff",
                  "textureCount": 1,
                },
                "type": "RwData",
                "version": 784,
              },
              Object {
                "_unknown": 0,
                "children": Array [
                  Object {
                    "_unknown": 0,
                    "data": Object {
                      "_padding": 0,
                      "addrModeU": 17,
                      "addrModeV": "RwDefault",
                      "filterMode": "RwLinearMipLinear",
                    },
                    "type": "RwData",
                    "version": 784,
                  },
                  Object {
                    "_unknown": 0,
                    "data": "abi19tm",
                    "type": "RwString",
                    "version": 784,
                  },
                  Object {
                    "_unknown": 0,
                    "data": "",
                    "type": "RwString",
                    "version": 784,
                  },
                  Object {
                    "_unknown": 0,
                    "children": Array [],
                    "type": "RwExtension",
                    "version": 784,
                  },
                ],
                "type": "RwTexture",
                "version": 784,
              },
              Object {
                "_unknown": 0,
                "children": Array [],
                "type": "RwExtension",
                "version": 784,
              },
            ],
            "type": "RwMaterial",
            "version": 784,
          },
        ],
        "type": "RwMaterialList",
        "version": 784,
      },
      Object {
        "_unknown": 0,
        "children": Array [
          Object {
            "_unknown": 0,
            "data": Object {
              "_unknown1": 0,
              "_unknown2": 0,
              "boundingBox": Array [
                Array [
                  28.03072738647461,
                  0.000002384185791015625,
                  32.74079513549805,
                ],
                Array [
                  56.06145477294922,
                  0.00000476837158203125,
                  65.4815902709961,
                ],
              ],
              "colors": Array [
                "ff000000",
                "ff000000",
                "ff000000",
                "ff000000",
              ],
              "indices": Array [
                Array [
                  0,
                  0,
                  1,
                  2,
                ],
                Array [
                  0,
                  2,
                  1,
                  3,
                ],
              ],
              "materialIndex": 0,
              "normals": Array [
                Array [
                  0,
                  127,
                  0,
                  5,
                ],
                Array [
                  0,
                  127,
                  0,
                  0,
                ],
                Array [
                  0,
                  127,
                  0,
                  0,
                ],
                Array [
                  0,
                  127,
                  0,
                  0,
                ],
              ],
              "textureCoords": Array [
                Array [
                  0.0033102035522460938,
                  0.1778697967529297,
                ],
                Array [
                  0.0033807754516601562,
                  28.822124481201172,
                ],
                Array [
                  22.99660301208496,
                  0.17785072326660156,
                ],
                Array [
                  22.99669075012207,
                  28.822147369384766,
                ],
              ],
              "triangleCount": 2,
              "vertexCount": 4,
              "vertices": Array [
                Array [
                  28.03072738647461,
                  0.00000476837158203125,
                  32.740821838378906,
                ],
                Array [
                  28.03082275390625,
                  0.0000030994415283203125,
                  65.4815673828125,
                ],
                Array [
                  56.061336517333984,
                  0.00000476837158203125,
                  32.74079513549805,
                ],
                Array [
                  56.06145477294922,
                  0.000002384185791015625,
                  65.4815902709961,
                ],
              ],
            },
            "type": "RwData",
            "version": 784,
          },
          Object {
            "_unknown": 0,
            "children": Array [
              Object {
                "_unknown": 0,
                "data": Object {
                  "faceCount": 6,
                  "faceType": "RwTriangles",
                  "splitCount": 1,
                  "splits": Array [
                    Object {
                      "count": 6,
                      "indices": Array [
                        2,
                        1,
                        3,
                        0,
                        1,
                        2,
                      ],
                      "materialIndex": 0,
                    },
                  ],
                },
                "type": "RwMaterialSplit",
                "version": 784,
              },
              Object {
                "_unknown": 0,
                "data": Object {
                  "_unknownData": Object {
                    "data": Array [
                      1,
                      0,
                      0,
                      0,
                      2,
                      0,
                      0,
                      0,
                      0,
                      0,
                      2,
                      0,
                      0,
                      0,
                      0,
                      0,
                      1,
                      0,
                      0,
                      0,
                    ],
                    "type": "Buffer",
                  },
                },
                "type": "RwCollisionPlugin",
                "version": 784,
              },
            ],
            "type": "RwExtension",
            "version": 784,
          },
        ],
        "type": "RwAtomicSector",
        "version": 784,
      },
      Object {
        "_unknown": 0,
        "children": Array [],
        "type": "RwExtension",
        "version": 784,
      },
    ],
    "type": "RwWorld",
    "version": 784,
    Symbol(parserData): Object {
      "colSectorSize": 0,
      "flags": Object {
        "RpWorldSectorOverlap": true,
        "RwLight": true,
        "RwModulateMaterialColor": true,
        "RwNative": false,
        "RwNativeInstance": false,
        "RwNormals": true,
        "RwPositions": false,
        "RwPrelit": true,
        "RwTextured": true,
        "RwTextured2": false,
        "RwTriangleStrip": false,
      },
      "invWorldOrigin": Array [
        -42.29510498046875,
        -1.4610846042633057,
        -45.50502014160156,
      ],
      "lighting": Object {
        "ambient": 1,
        "diffuse": 1,
        "specular": 0,
      },
      "planeSectorCount": 0,
      "rootIsWorldSector": 1,
      "triangleCount": 2,
      "vertexCount": 4,
      "worldSectorCount": 1,
    },
  },
]
`;
